# ldpc-post-selection

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  benchmark_committed_clusters.py  pyproject.toml  requirements.txt  validate_numba_optimization.py
simulations/: CLAUDE.md  bb_simulation.py  bb_sliding_window_simulation.py  build_circuit.py  build_random_hgp_circuits.py  color_code_simulation.py  data_consistency_checker.py  hgp_simulation.py  mcmc_simulator.py  process_feather_files.py  pyproject.toml  run_parallel_task.py  simulation_utils.py  simulation_utils_legacy.py  simulator.py  surface_code_simulation.py  surface_code_simulation_matching.py  surface_code_simulation_phenom.py  surface_code_sliding_window_simulation.py  toric_code_bitflip_simulation.py  toric_code_corr_length.py
simulations/analysis/: CLAUDE.md  bb_code_analysis.ipynb  bb_code_analysis_criteria_comparison.ipynb  collect_bb_simulation_data.py  collect_hgp_simulation_data.py  collect_surface_code_simulation_data.py  data_aggregation.py  data_collection.py  data_post_processing.py  hgp_code_analysis.ipynb  numba_benchmark.py  numba_functions.py  numpy_utils.py  plotting_helpers.py  simple_lattice_percolation_simulation_plots.ipynb  simulation_data_utils.py  surface_code_analysis.ipynb  surface_code_analysis_criteria_comparison copy.ipynb
simulations/analysis/data_collectors/: CLAUDE.md  collect_bb_simulation_data.py  collect_bb_sliding_window_simulation_data.py  collect_color_code_simulation_data.py  collect_hgp_simulation_data.py  collect_surface_code_simulation_data.py  collect_surface_code_simulation_phenom_data.py  collect_surface_sliding_window_simulation_data.py  data_aggregation.py  data_collection.py  data_metric_calculation.py  numpy_utils.py  run_bb_sliding_window_postselection_analysis.py  run_surface_sliding_window_postselection_analysis.py  sliding_window_ordinary.py  sliding_window_post_selection.py
simulations/analysis/legacy/: convert_aggregated_data.py  data_io.py  histogram_calculation_test.py  inspect_aggregated_data.py  norms_calculation_test.py  test_converted_data.py  (+1 more)
simulations/archive/: hgp_simulation_legacy.py  mcmc_simulator.py  rename_batch_folders.py  reorganize_circuits.py  simple_lattice_percolation_simulation.py
simulations/circuits/: README.md
simulations/tests/: test_simulation_utils.py
simulations/utils/: CLAUDE.md  build_circuit.py  build_random_hgp_circuits.py  simulation_utils.py  simulation_utils_legacy.py
(+227 files in other folders)
