[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldpc-post-selection"
version = "0.1.0"
description = "LDPC Post Selection Decoding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.11",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scipy>=1.15.3",
    "statsmodels>=0.14.3",
    "stim>=1.14.0",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytest",
    "numba",
    "rsmf",
    "color-code-stim",
    "scikit-learn",
    "quits @ git+https://github.com/mkangquantum/quits.git",
    "ldpc @ file:./ext/ldpc",
]

[tool.setuptools]
packages = ["simulations", "ldpc_post_selection"]

[tool.setuptools.package-dir]
"simulations" = "simulations"
"ldpc_post_selection" = "src/ldpc_post_selection"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"] 