[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldpc-post-selection"
version = "0.1.1"
description = "LDPC Post Selection Decoding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.11",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scipy>=1.15.3",
    "stim>=1.14.0",
    "pytest",
    "numba",
    'tqdm',
    "seaborn>=0.13.2",
    "python-igraph",
    "pymatching",
    "ldpc>=2.4.0",
]

[tool.setuptools]
packages = ["ldpc_post_selection"]

[tool.setuptools.package-dir]
"ldpc_post_selection" = "src/ldpc_post_selection"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"] 
