[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "cython>=3.0.11"]
build-backend = "setuptools.build_meta"

[project]
name = "simulations"
version = "0.1.0"
description = "Simulation suite for LDPC post-selection research"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.66.0",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "statsmodels>=0.14.3",
    "rsmf",
    "color-code-stim",
    "scikit-learn",
    "quits @ git+https://github.com/mkangquantum/quits.git",
]

[tool.setuptools]
packages = ["simulations"]

[tool.setuptools.package-dir]
"simulations" = "."

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]
